--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>{{ recipe.name }}}</h1>
+        <h1>{{ recipe.name }}</h1>
     </div>
 </div>
 <div class="row">
@@ -17,9 +17,9 @@
                 Manage Recipe <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-            <li><a (click)="onAddToShoppingList()">To Shopping List</a></li>
-            <li><a href="#">Edit Recipe</a></li>
-            <li><a href="#">Delete Recipe</a></li>
+            <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
+            <li><a (click)="onEditRecipe()" style="cursor: pointer;">Edit Recipe</a></li>
+            <li><a style="cursor: pointer;">Delete Recipe</a></li>
         </ul>
         </div>
     </div>
